Fixed overflow x scroll on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@100;200;400;500;700&display=swap');
 
 html, body {
-	width:  100%;
-	max-width: 100%;
+	width:  100vw;
+	max-width: 100vw;
 	overflow-x: hidden;
 }
 
